<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_posts"
            android:icon="@drawable/ic_baseline_dynamic_feed_24"
            android:title="@string/menu_posts" />
        <item
            android:id="@+id/wallFragment"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/menu_wall" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_jobs"
            android:icon="@drawable/ic_baseline_work_24"
            android:title="@string/menu_jobs" />
    </group>
</menu>