<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mysocialandroidapp2.activity.PostsFragment"
        android:label="@string/menu_posts"
        tools:layout="@layout/fragment_posts" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mysocialandroidapp2.activity.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mysocialandroidapp2.activity.JobsFragment"
        android:label="@string/menu_jobs"
        tools:layout="@layout/fragment_jobs" />
</navigation>