<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegFragment">


    <ImageView
        android:id="@+id/photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginHorizontal="48dp"
        app:layout_constraintDimensionRatio="H,1:1"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/description_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonLoadAvatar"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#80FFFFFF"
        android:contentDescription="@string/description_select_photo"
        app:icon="@drawable/ic_camera_24"
        app:layout_constraintBottom_toBottomOf="@+id/photo"
        app:layout_constraintEnd_toEndOf="@+id/photo" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/editTextName"
        app:layout_constraintEnd_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toTopOf="@+id/editTextName"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/smaller_spacing"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/materialButtonLoadAvatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="170dp" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="@+id/editTextLogin"
        app:layout_constraintEnd_toStartOf="@+id/editTextLogin"
        app:layout_constraintTop_toTopOf="@+id/editTextLogin"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/smaller_spacing"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:text="Password"
        app:layout_constraintEnd_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextPassword"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/smaller_spacing"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="@dimen/smaller_spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />




</androidx.constraintlayout.widget.ConstraintLayout>