<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewEventFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--            <EditText-->
            <!--                android:id="@+id/edit"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:background="@android:color/transparent"-->
            <!--                android:inputType="textMultiLine"-->
            <!--                android:padding="@dimen/common_spacing" />-->


            <TableLayout
                android:id="@+id/tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TableRow android:padding="1dp">
                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/contentLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:padding="@dimen/small_spacing"
                            android:text="@string/content" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#EEEEEEEE"
                            android:inputType="textMultiLine"
                            android:layout_weight="1"
                            android:padding="@dimen/small_spacing"
                            tools:ignore="DuplicateClickableBoundsCheck,SpeakableTextPresentCheck" />
                </TableRow>

                <TableRow android:padding="1dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/dateLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:padding="@dimen/small_spacing"
                        android:text="@string/datetime" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#EEEEEEEE"
                        android:layout_weight="1"
                        android:inputType="date"
                        android:padding="@dimen/small_spacing"
                        tools:ignore="DuplicateClickableBoundsCheck,SpeakableTextPresentCheck" />
                </TableRow>

                <TableRow android:padding="1dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/positionLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:padding="@dimen/small_spacing"
                        android:text="@string/position" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/position"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#EEEEEEEE"
                        android:layout_weight="1"
                        android:padding="@dimen/small_spacing"
                        tools:ignore="DuplicateClickableBoundsCheck,SpeakableTextPresentCheck" />
                </TableRow>

                <TableRow android:padding="1dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/linkLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:padding="@dimen/small_spacing"
                        android:text="@string/link" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#EEEEEEEE"
                        android:layout_weight="1"
                        android:padding="@dimen/small_spacing"
                        tools:ignore="DuplicateClickableBoundsCheck,SpeakableTextPresentCheck" />
                </TableRow>
            </TableLayout>

            <FrameLayout
                android:id="@+id/photoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/description_photo" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/removePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/remove" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:background="@color/divider_color"
        app:layout_constraintBottom_toTopOf="@id/buttonPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pickPhoto"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_select_photo"
            android:padding="@dimen/common_spacing"
            app:icon="@drawable/ic_photo_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/takePhoto"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_take_photo"
            android:padding="@dimen/common_spacing"
            app:icon="@drawable/ic_camera_24" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>